# misc-projects

./: .gitignore  LICENSE  README.md
echo-asm/: README.md  echo.asm
echo-c/: README.md  echo.c
memory_allocator-asm/: README.md  allocator.asm
simple_malloc-c/: CMakeLists.txt  README.md  simple_malloc.c  simple_malloc.h
snake-py/: README.md  snake.py
try-catch-c/: README.md  main.c  try.c  try.h
